--- a/edipo/pubspec.yaml
+++ b/edipo/pubspec.yaml
@@ -31,7 +31,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  carousel_slider: ^4.1.1
+  # Core
+  form_builder_validators: ^8.3.0
+  json_annotation: ^4.6.0
+  # 
+  flutter_svg: ^1.1.1+1
+  animated_bottom_navigation_bar: ^1.0.1
+  flutter_rating_bar: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +70,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/svg/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -86,6 +97,11 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+  
+  fonts:
+    - family: Urbanist
+      fonts:
+      - asset: assets/fonts/Urbanist-VariableFont_wght.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
