--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,18 @@ dependencies:
   animated_bottom_navigation_bar: ^1.0.1
   flutter_rating_bar: ^4.0.1
 
+  #Location
+  google_maps_flutter: ^2.2.1
+  geolocator: ^9.0.2
+  flutter_google_places: ^0.3.0
+ 
+
+  #Core
+  equatable: ^2.0.3
+
+  #States
+  flutter_bloc: ^8.1.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
